[minor/css] corrects a bug causing some fields appearing too large (wims_deposit)
git-svn-id: https://subversion.renater.fr/wimsdev/trunk@9726 b48fb02d-6135-0410-b1dd-deb767c81da9

--- a/wims/public_html/themes/_css/code.css
+++ b/wims/public_html/themes/_css/code.css
@@ -48,7 +48,7 @@ pre{
    padding: 1em;
 }
 
-#wims_deposit {
+textarea#wims_deposit {
   width:80%;
   min-width:50em;
   min-height:30em;
